[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tlsn-core = {git="https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6",package = "tlsn-core"}
serde_json = "1.0"
chrono = "0.4"
p256 = {version = "0.13", features = ["ecdsa", "arithmetic"]}
elliptic-curve = { version = "0.13.5", features = ["pkcs8", "pem"] }
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
notary-client = {git="https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6",package = "notary-client"}
tlsn-prover = {git="https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.6",package = "tlsn-prover"}
tokio = "1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
tracing = "0.1"
dotenv = "0.15.0"
axum = "0.7.5"
serde = "1.0.204"
ethers = "2.0.14"
k256 = {version="0.13.3",features = ["ecdsa-core"]}
hex-literal = "0.4.1"
alloy = { version = "0.1.4", features = ["full"] }
secp256k1 = {version="0.29.0",features = ["hashes"]}

[[example]]
name="verifier"
path="src/verifier.rs"

[[example]]
name="prover"
path="src/prover.rs"
